--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <title>Document</title>
+    <meta charset="utf-8">
+    <title>Roman Numerals</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/jquery-3.1.1.js"></script>
+    <script src="js/scripts.js"></script>
 </head>
 
 <body>
+    <div class="container">
+        <h1>Convert to Roman Number</h1>
 
-  <script src="js/jquery-3.1.1.js" charset="utf-8"></script>
-  <script src="js/bootstrap.min.js" charset="utf-8"></script>
-  <script src="js/scripts.js" charset="utf-8"></script>
+        <form id="roman-number">
+            <div class="form-group">
+                <label for="number">Enter a number to convert it to Roman Number:</label>
+                <input id="input1" type="number">
+            </div>
+
+            <button type="submit" class="btn">Convert</button>
+        </form>
+
+        <div id="answer">
+            <p><span id="result"></span></p>
+        </div>
 </body>
 
 </html>
